--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "angular-material": "^0.10.0"
+    "angular-material": "^0.10.0",
+    "ngDialog": "~0.4.0",
+    "angular-ui-router": "~0.2.15"
   },
   "devDependencies": {
     "mockfirebase": "0.11.0",
